Dropdown alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -672,6 +672,11 @@ input[type="radio"] {
     transition: rotate 3s;
 }
 
+.dropdown {
+    display: flex;
+    justify-content: space-between;
+}
+
 .dropdown-content {
     background-color: #f5f5f5;
     box-shadow: 0 0px 15px rgba(0, 0, 0, 0.1);
@@ -679,13 +684,14 @@ input[type="radio"] {
     display: none;
     padding: 15px 20px;
     position: absolute;
-    margin: 0px 0 0 0;
+    margin: 20px 0 0 0;
     left: 10px;
     z-index: 4;
 }
 
 .drop-btn {
     cursor: pointer; 
+    display: inline-block;
 } 
 
 .dropdown:hover .dropdown-content {
